<resources>
    <string name="app_name">New Budget App</string>
    <string name="title_activity_login">login</string>
    <string name="bill_title">Bill Title</string>
    <string name="bill_details">Bill Details</string>
    <string name="schedule_reminder">Schedule Reminder</string>
    <string name="select_an_option">Select an option</string>
    <string name="confirm">Confirm</string>
    <string name="frequency_query">How often would you like to update your info?</string>
    <string name="welcome">Welcome</string>
    <string name="user">User</string>
    <string name="enter_income">Enter income</string>
    <string name="add_income">Add Income</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="savings">Savings</string>
    <string name="visual_analytics">Visual Analytics</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="bill_reminders">Bill Reminders</string>
    <string name="schedule_updates">Schedule Updates</string>
    <string name="my_savings_goal">My Savings Goal</string>
    <string name="rent">Rent</string>
    <string name="expense_categories">Expense Categories</string>
    <string name="food">Food</string>
    <string name="groceries">Groceries</string>
    <string name="log_in">Log In</string>
    <string name="green_needle_budget">Green Needle Budget</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="need_an_account_create_one_here">Need an account? Create one here</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="goal_name">Goal Name</string>
    <string name="enter_goal_amount">Enter goal amount</string>
    <string name="select_deadline">Select Deadline</string>
    <string name="deadline_not_set">Deadline: Not Set</string>
    <string name="goal_not_set">Goal: Not Set</string>
    <string name="update_goal">Update Goal</string>
    <string name="reset_graph">Reset Graph</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="stats">Stats</string>
    <string name="menu_add_to_savings">Add to Savings</string>
    <string name="menu_delete_goal">Delete Goal</string>
    <string name="spent">Spent</string>
    <string name="limit">Limit</string>
    <string name="category">Category</string>
    <string name="options">Options</string>
    <string name="deadline">Deadline</string>
    <string name="target">Target</string>
    <string name="remaining">Remaining</string>
    <string name="budgeting">Budgeting</string>
    <string name="achievements_and_leaderboard"><![CDATA[Achievements & Leaderboard]]></string>
    <string name="other">Other</string>
    <string name="entertainment">Entertainment</string>
    <string name="transportation">Transportation</string>
    <string name="going_out">Going Out</string>
    <string name="utilities">Utilities</string>
    <string name="savings_amp_budgets"><![CDATA[Savings & Budgets]]></string>
    <string name="target_amount">Target Amount</string>
    <string name="add_goal">Add Goal</string>
    <string name="limit_amount">Limit Amount</string>
    <string name="add_budget">Add Budget</string>

</resources>