<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings2">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        android:layout_centerInParent="true"
        android:hint="@string/select_an_option"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        app:boxCornerRadiusBottomEnd="10sp"
        app:boxCornerRadiusBottomStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusTopStart="10sp"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/optionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/options_list"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/setAlarmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/inputLayout"
        android:backgroundTint="@color/jade"
        android:text="@string/confirm"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="258dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/frequency_query"
        android:textColor="#000000"
        android:textSize="15sp"/>

    <ImageButton
        android:id="@+id/settings2BackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="600dp"
        android:layout_centerInParent="true"
        android:src="@drawable/round_arrow_back_24" />

</RelativeLayout>